# aperiodic-chess

./: Cargo.toml  README.md
src/: bit_board.rs  chess_move.rs  constants.rs  engine.rs  evaluator.rs  game.rs  graph_board.rs  jump_table.rs  limited_int.rs  main.rs  move_generator.rs  movement_tables.rs  piece.rs  piece_set.rs  position.rs  searcher.rs  transposition_table.rs  zobrist.rs
src/graph_boards/: aperiodic_board.rs  graph_board.rs  hexagonal_board.rs  mod.rs  traditional_board.rs  uniform_triangle_board.rs
